--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -15,7 +15,7 @@
     fill: #61c4d9;
     stroke: #b0f7ff;
     max-width: 100%;
-    
+    max-height: 100%;
   }
   &__title {
     text-transform: uppercase;
