--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@
   .hero__svg {
     fill: #61c4d9;
     stroke: #b0f7ff;
-    max-width: 100%; }
+    max-width: 100%;
+    max-height: 100%; }
   .hero__title {
     text-transform: uppercase;
     font-size: 60px;
