--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -1,12 +1,12 @@
 .btn {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 19px;
+  font-size: rem(19px);
   font-family: "AlegreyaSansExtraBold";
   background: $white;
-  padding: 16px 34px;
+  padding: rem(16px) rem(34px);
   border: none;
-  border-radius: 50px;
+  border-radius: rem(50px);
   color:#006633;
   display: inline-block;
 }
