--- a/css/blocks/content.scss
+++ b/css/blocks/content.scss
@@ -4,7 +4,7 @@
  &__info{
    display: flex;
    flex-direction: row;
-   margin-bottom:20px;
+   margin-bottom:rem(20px);
  }
  &__order{
   display: flex;
@@ -12,53 +12,56 @@
  }
   &__composition{
     width: 100%;
-    margin-bottom:30px;
+    margin-bottom:rem(30px);
     &-title{
-      font-size: 24px;
+      font-size: rem(24px);
       font-family: "AlegreyMedium";
       color: rgb(50, 50, 50);
-      margin-bottom:19px;
-      max-height: 300px;
+      margin-bottom:rem(19px);
+      max-height: rem(300px);
       overflow: hidden;
     }
     &-text{
-        font-size: 18px;
+        font-size: rem(18px);
         color: $grey;
         line-height: 1.2;
         text-align: left;
       }
+      @include tablets {
+       text-align: center;
+      }
   }
   &__calorie{
-    margin-right: 60px;
+    margin-right: rem(60px);
     &-title{
-        font-size: 18px;
+        font-size: rem(18px);
         color: rgb(51, 51, 51);
         
     }
     &-text{
-        font-size: 18px;
+        font-size: rem(18px);
         color: rgb(51, 51, 51);
         font-weight: bold;
     }
   }
   &__weight{
     &-title{
-      font-size: 18px;
+      font-size: rem(18px);
       color: rgb(51, 51, 51);
   }
   &-text{
-      font-size: 18px;
+      font-size: rem(18px);
       color: rgb(51, 51, 51);
       font-weight: bold;
   }
   }
   &__order{
     &-price{
-        font-size: 60px;
+        font-size: rem(60px);
         font-family: "Alegreya Sans Light";
         text-transform: uppercase;
         font-family: "AlegreyLite";
-        margin-right:30px;
+        margin-right:rem(30px);
     }
     &-btn{
       background-color: $green;
@@ -66,5 +69,7 @@
       align-self: center;
     }
   }
-  
+  @include tablets {
+    align-items: center;
+  }
 }
