--- a/css/blocks/feature.scss
+++ b/css/blocks/feature.scss
@@ -7,12 +7,12 @@
   &__pic {
     background-color: $bggrey;
     border-radius: 50%;
-    width: 125px;
-    height: 125px;
+    width: rem(125px);
+    height: rem(125px);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding:25px;
+    padding:rem(25px);
     &-img {
       max-width: 100%;
       stroke:#0d0d0d;
@@ -21,27 +21,31 @@
    
   }
   &__name {
-    font-size: 27px;
+    font-size: rem(27px);
     font-weight: bold;
-    margin-top:29px;
+    margin-top:rem(29px);
   }
   &__text {
     text-align: center;
     margin: 0px;
     padding: 5px;
-    font-size: 18px;
+    font-size: rem(18px);
     color:$grey;
-    margin-top:10px;
+    margin-top:rem(10px);
+
   }
   &::after{
     content: "";
     display: block;
-    width: 70px;
+    width: rem(70px);
     position: relative;
-    top: -234px;
-    left: 157px;
-    height: 50px;
+    top: rem(-234px);
+    left: rem(157px);
+    height: rem(50px);
     background: url(/img/why/dots.png) no-repeat;
+    @include tablets(){
+      display: none;
+    }
 
   }
   &:last-child::after{
