--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -14,12 +14,12 @@
   &__row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 8px;
+    margin-bottom: rem(8px);
   }
   &__content {
     width: 100%;
     &-textarea{
-      margin-bottom:7px;
+      margin-bottom:rem(7px);
     }
 
     &--half {
@@ -33,8 +33,8 @@
     margin-bottom: 8px;
   }
   &__input {
-    font-size: 18px;
-    padding: 18px 12px;
+    font-size: rem(18px);
+    padding: rem(18px) 12px;
     width: 100%;
     border: 3px solid transparent;
 
@@ -45,8 +45,8 @@
   }
   &__textarea {
     width: 100%;
-    font-size: 18px;
-    padding: 18px 12px;
+    font-size: rem(18px);
+    padding: rem(18px) rem(12px);
     resize: none;
     border: 3px solid transparent;
 
@@ -74,9 +74,9 @@
       opacity: 1;
     }
     &-fake {
-      width: 26px;
-      height: 26px;
-      margin-right: 9px;
+      width: rem(26px);
+      height: rem(26px);
+      margin-right: rem(9px);
       background-color: #fff;
       align-items: center;
       justify-content: center;
@@ -95,18 +95,18 @@
     }
   }
   &__radio-fake {
-    width: 26px;
-    height: 26px;
+    width: rem(26px);
+    height: rem(26px);
     border-radius: 50%;
-    margin-right: 9px;
+    margin-right: rem(9px);
     background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
     &:after {
       content: "";
-      width: 14px;
-      height: 14px;
+      width: rem(14px);
+      height: rem(14px);
       border-radius: 50%;
       background-color: $green;
       opacity: 0;
@@ -117,7 +117,7 @@
     justify-content: flex-start;
   }
   &__buttons{
-    margin-top:23px;
+    margin-top:rem(23px);
   }
   &__button--hover{
     background-color:$green;
