--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,6 +1,14 @@
+
+
 .hero {
   background: url(/img/hero/sheet1.png) right center / contain no-repeat $blue;
   color: $white;
+  @include tablets(){
+
+    background-position-y: top;
+    background-size: unset;
+  }
+
 
   &__content {
     flex: 0.8;
@@ -8,8 +16,26 @@
     display:flex;
     flex-direction: column;
     justify-content:space-between;
-    padding-bottom: 50px;
+    padding-bottom: rem(50px);
     width:54%;
+  
+    @include tablets(){
+      align-items: center;
+      width:100%;
+      flex:0.7;
+      
+    }
+    &-text{
+      z-index: 200;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      @include tablets(){
+      width:54%;
+      align-items: center;
+      text-align: center;
+    }
+    }
   }
   &__svg{
     fill: #61c4d9;
@@ -19,30 +45,45 @@
   }
   &__title {
     text-transform: uppercase;
-    font-size: 60px;
+    font-size: rem(60px);
     letter-spacing: 0.028em;
     font-weight: bold;
     padding: 5px 0px 5px 0px;
-    margin-bottom:12px;
-    line-height: 60px;
+    margin-bottom:rem(12px);
+    line-height:1;
     max-width:90%;
   }
   &__description {
     font-size: 21px;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: rem(10px);
     line-height: 1.1;
     max-width:75%;
   }
-  &__container::after{
-    content: "";
-    width:110%;
-    height: 353px;
-    position: absolute;
-    bottom:-5%;
-    left:-5%;
-    background: url(/img/hero/berries.png)  no-repeat ;
+  
 
+  
+  &__container{
+    @include tablets(){
+  
+        align-items: center;
+        width: 100%;
+    }
+    &::after{
+      content: "";
+      width:110%;
+      height: rem(353px);
+      position: absolute;
+      bottom:-5%;
+      left:-5%;
+      background: url(/img/hero/berries.png)  no-repeat ;
+      @include tablets(){
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: url(/img/hero/bg768.png)  no-repeat ;
+    }
+    }
   }
   &__content-icon {
     display: flex;
@@ -51,21 +92,28 @@
   &__content-images {
     position: absolute;
     bottom: 0px;
-    right: -36px;
+    right: rem(-36px);
     top: 0;
-    max-width: 503px;
+    max-width: rem(503px);
     display: flex;
     justify-content: center;
     align-items: center;
     .image {
       max-width: 100%;
     }
+    @include tablets(){
+  
+      align-items: flex-start;
+      right:auto;
+      top:4rem;
+      width: 100%;
+  }
 
 
     .berries {
       z-index: 3;
-      bottom: -40px;
-      right: -73px;
+      bottom: rem(-40px);
+      right: rem(-73px);
     }
   }
 }
@@ -80,38 +128,13 @@
 
 .item__text {
 
-  font-size: 16px;
+  font-size: rem(16px);
   display: flex;
-  // &:before {
-  //   margin: 5px;
-  //   height: 43px;
-  // }
-
-  // &-natural:before {
-  //   content: "";
-  //   background: url("/img/hero/icon-natural.png") center center /contain no-repeat;
-  //   min-width:65px;
-  //   height: 46px;
-  // }
-
-  // &-delivery:before {
-  //   content: "";
-  //   background: url("/img/hero/icon-delivery.png") center center /contain no-repeat;
-  //   min-width:65px;
-  //   height: 46px;
-  // }
-  // &-calorie:before {
-  //   content: "";
-  //   background: url("/img/hero/icon-calorie.png") center center /contain no-repeat;
-  //   min-width:65px;
-  //   height: 46px;
-  // }
   
-
 }
 .icon__item {
   display: flex;
-  max-width: 170px;
+  max-width: rem(170px);
   &-pic{
     display: flex;
     justify-content: center;
