--- a/css/blocks/menu1.scss
+++ b/css/blocks/menu1.scss
@@ -45,8 +45,8 @@
             transform:rotate(-90deg);
             position: absolute;
             display: flex;
-            min-width: 558px;
-            max-width: 550px;
+            min-width: rem(558px);
+            max-width: rem(550px);
 
         }
         font-family: "AlegreyMedium";
@@ -56,7 +56,7 @@
         justify-content: center;
         position: relative;
         display:flex;
-        font-size: 48px;
+        font-size: rem(48px);
         height: 100%;
         min-width: 2.1em;
   
@@ -66,7 +66,7 @@
         display: none;
         width: 0;
         transition: width 0.3s;
-        padding:55px 32px;
+        padding:rem(55px) rem(32px);
     }
     
 }
