--- a/css/blocks/phone.scss
+++ b/css/blocks/phone.scss
@@ -2,10 +2,13 @@
   &__link{
     text-decoration: none;
     color:inherit;
-    font-size: 24px;
+    font-size: rem(24px);
     &:before {
       content: url("/icons/phone.png");
       margin: 5px;
     }
+  }
+  @include tablets(){
+    display: none;
   }
 }
