--- a/css/blocks/slider.scss
+++ b/css/blocks/slider.scss
@@ -1,26 +1,24 @@
 .slider {
   background-color: rgb(248, 250, 249);
   &__container {
-    
-   
-    max-width:rem(940px);
+    max-width: rem(940px);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    width:95%;
-
-
+    width: 95%;
   }
-  &__wrapper{
+  &__wrapper {
     overflow: hidden;
   }
   .section__title-slider {
     text-align: left;
-    font-size: 36px;
-    padding:0;    
+    font-size: rem(36px);
+    padding: 0;
     line-height: 1.2;
-  
+    @include tablets {
+      text-align: center;
+    }
   }
   &__list {
     display: flex;
@@ -35,9 +33,12 @@
     width: 100%;
     position: relative;
     flex-shrink: 0;
+    @include tablets {
+      flex-direction: column;
+    }
   }
   .btn__arrow--prev {
-    width: 40px;
+    width: rem(40px);
     justify-content: flex-start;
     display: flex;
     position: absolute;
@@ -45,7 +46,7 @@
     left: -2%;
   }
   .btn__arrow--next {
-    width: 40px;
+    width: rem(40px);
     justify-content: flex-end;
     display: flex;
     position: absolute;
@@ -54,17 +55,28 @@
   }
   &__left {
     width: 50%;
-
-
+    @include tablets {
+      width:100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
   &__right {
     width: 50%;
-    padding: 13px 5px 5px 68px;
+    padding: rem(13px) rem(5px) rem(5px) rem(68px);
     justify-content: space-between;
     display: flex;
     flex-direction: column;
+    @include tablets {
+      width:100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
   &__image {
     max-width: 100%;
   }
 }
+
