--- a/css/blocks/social.scss
+++ b/css/blocks/social.scss
@@ -11,8 +11,8 @@
     
   }
   &__item{
-    width:23px;
-    margin-right: 20px;
+    width:rem(23px);
+    margin-right: rem(20px);
     &:last-child{
       margin-right: 0;
     }
