--- a/css/blocks/user.scss
+++ b/css/blocks/user.scss
@@ -1,8 +1,8 @@
 .user {
-  width: 94px;
-  height: 94px;
+  width: rem(94px);
+  height: rem(94px);
   border-radius: 50%;
-  margin-right: 20px;
+  margin-right: rem(20px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,8 +13,8 @@
   }
   &-hover {
     border: 8px solid $green;
-    width: 102px;
-    height: 102px;
+    width: rem(102px);
+    height: rem(102px);
   }
   &:last-child {
     margin-right: 0px;
