--- a/css/blocks/comment.scss
+++ b/css/blocks/comment.scss
@@ -1,6 +1,9 @@
 .comment {
   &__desc {
     padding: 10px 20px 20px 20px;
+    @include tablets {
+      text-align: center;
+    }
   }
   &__title {
     letter-spacing: 1px;
