--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,43 +1,48 @@
-
-
 .hero {
   background: url(/img/hero/sheet1.png) right center / contain no-repeat $blue;
   color: $white;
-  @include tablets(){
-
+  @include tablets() {
     background-position-y: top;
     background-size: unset;
   }
-
+  @include phones() {
+    background-size: 85% auto;
+  }
 
   &__content {
     flex: 0.8;
     margin-top: auto;
-    display:flex;
+    display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
     padding-bottom: rem(50px);
-    width:54%;
-  
-    @include tablets(){
+    width: 54%;
+
+    @include tablets() {
       align-items: center;
-      width:100%;
-      flex:0.7;
-      
+      width: 100%;
+      flex: 0.5;
+      justify-content: space-around;
     }
-    &-text{
+    &-text {
       z-index: 200;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      @include tablets(){
-      width:54%;
-      align-items: center;
-      text-align: center;
-    }
+
+      @include tablets() {
+        width: 69%;
+        justify-content: space-between;
+        flex: 0.8;
+        align-items: center;
+        text-align: center;
+      }
+      @include phones() {
+        width: 100%;
+      }
     }
   }
-  &__svg{
+  &__svg {
     fill: #61c4d9;
     stroke: #b0f7ff;
     max-width: 100%;
@@ -49,40 +54,43 @@
     letter-spacing: 0.028em;
     font-weight: bold;
     padding: 5px 0px 5px 0px;
-    margin-bottom:rem(12px);
-    line-height:1;
-    max-width:90%;
+    margin-bottom: rem(12px);
+    line-height: 1;
+    max-width: 90%;
+    @include phones {
+      margin-bottom: 0;
+    }
   }
   &__description {
     font-size: 21px;
     padding: 5px;
     margin-bottom: rem(10px);
     line-height: 1.1;
-    max-width:75%;
-  }
-  
-
-  
-  &__container{
-    @include tablets(){
-  
-        align-items: center;
-        width: 100%;
+    max-width: 75%;
+    @include phones {
+      margin-bottom: rem(20px);
     }
-    &::after{
+  }
+
+  &__container {
+    @include tablets() {
+      align-items: center;
+      width: 100%;
+    }
+    &::after {
       content: "";
-      width:110%;
+      width: 110%;
       height: rem(353px);
       position: absolute;
-      bottom:-5%;
-      left:-5%;
-      background: url(/img/hero/berries.png)  no-repeat ;
-      @include tablets(){
+      bottom: -5%;
+      left: -5%;
+      background: url(/img/hero/berries.png) no-repeat;
+      @include tablets() {
         display: flex;
         align-items: center;
         justify-content: center;
-        background: url(/img/hero/bg768.png)  no-repeat ;
-    }
+        background: none;
+      }
     }
   }
   &__content-icon {
@@ -100,15 +108,25 @@
     align-items: center;
     .image {
       max-width: 100%;
+      &--tablet {
+        display: none;
+        @include tablets() {
+          display: flex;
+          position: absolute;
+          top: rem(224px);
+        }
+      }
     }
-    @include tablets(){
-  
+    @include tablets() {
       align-items: flex-start;
-      right:auto;
-      top:4rem;
+      right: auto;
+      top: 4rem;
       width: 100%;
-  }
-
+    }
+    @include tablets() {
+      top: 2rem;
+      width: 91%;
+    }
 
     .berries {
       z-index: 3;
@@ -124,18 +142,17 @@
   justify-content: space-between;
 }
 
-
-
 .item__text {
-
   font-size: rem(16px);
   display: flex;
-  
+  @include tablets() {
+    max-width: rem(100px);
+  }
 }
 .icon__item {
   display: flex;
   max-width: rem(170px);
-  &-pic{
+  &-pic {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,8 +160,15 @@
     height: 2.8125rem;
     margin-right: 0.625rem;
   }
+  @include tablets() {
+    max-width: rem(230px);
+    margin-right: rem(30px);
+    .icon__item:last-child {
+      margin: 0;
+    }
+  }
 }
-.icon__item-pic{
+.icon__item-pic {
   display: flex;
   justify-content: center;
   align-items: center;
