--- a/css/blocks/social.scss
+++ b/css/blocks/social.scss
@@ -2,7 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  
+  @include phones {
+    width: 100%;
+    justify-content:center;
+  }
   &__list {
     display: flex;
     flex-direction: row;
