--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@
     .hero {
       background-position-y: top;
       background-size: unset; } }
+  @media screen and (max-width: 480px) {
+    .hero {
+      background-size: 85% auto; } }
   .hero__content {
     -webkit-box-flex: 0.8;
     -ms-flex: 0.8;
@@ -29,9 +32,11 @@
         -ms-flex-align: center;
         align-items: center;
         width: 100%;
-        -webkit-box-flex: 0.7;
-        -ms-flex: 0.7;
-        flex: 0.7; } }
+        -webkit-box-flex: 0.5;
+        -ms-flex: 0.5;
+        flex: 0.5;
+        -ms-flex-pack: distribute;
+        justify-content: space-around; } }
     .hero__content-text {
       z-index: 200;
       display: -webkit-box;
@@ -46,11 +51,20 @@
       align-items: flex-start; }
       @media screen and (max-width: 768px) {
         .hero__content-text {
-          width: 54%;
+          width: 69%;
+          -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+          justify-content: space-between;
+          -webkit-box-flex: 0.8;
+          -ms-flex: 0.8;
+          flex: 0.8;
           -webkit-box-align: center;
           -ms-flex-align: center;
           align-items: center;
           text-align: center; } }
+      @media screen and (max-width: 480px) {
+        .hero__content-text {
+          width: 100%; } }
   .hero__svg {
     fill: #61c4d9;
     stroke: #b0f7ff;
@@ -65,12 +79,18 @@
     margin-bottom: 0.75rem;
     line-height: 1;
     max-width: 90%; }
+    @media screen and (max-width: 480px) {
+      .hero__title {
+        margin-bottom: 0; } }
   .hero__description {
     font-size: 21px;
     padding: 5px;
     margin-bottom: 0.625rem;
     line-height: 1.1;
     max-width: 75%; }
+    @media screen and (max-width: 480px) {
+      .hero__description {
+        margin-bottom: 1.25rem; } }
   @media screen and (max-width: 768px) {
     .hero__container {
       -webkit-box-align: center;
@@ -96,7 +116,7 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center;
-        background: url(/img/hero/bg768.png) no-repeat; } }
+        background: none; } }
   .hero__content-icon {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -119,6 +139,15 @@
     align-items: center; }
     .hero__content-images .image {
       max-width: 100%; }
+      .hero__content-images .image--tablet {
+        display: none; }
+        @media screen and (max-width: 768px) {
+          .hero__content-images .image--tablet {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            position: absolute;
+            top: 14rem; } }
     @media screen and (max-width: 768px) {
       .hero__content-images {
         -webkit-box-align: start;
@@ -127,6 +156,10 @@
         right: auto;
         top: 4rem;
         width: 100%; } }
+    @media screen and (max-width: 768px) {
+      .hero__content-images {
+        top: 2rem;
+        width: 91%; } }
     .hero__content-images .berries {
       z-index: 3;
       bottom: -2.5rem;
@@ -148,6 +181,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  @media screen and (max-width: 768px) {
+    .item__text {
+      max-width: 6.25rem; } }
 
 .icon__item {
   display: -webkit-box;
@@ -167,6 +203,12 @@
     width: 4.0625rem;
     height: 2.8125rem;
     margin-right: 0.625rem; }
+  @media screen and (max-width: 768px) {
+    .icon__item {
+      max-width: 14.375rem;
+      margin-right: 1.875rem; }
+      .icon__item .icon__item:last-child {
+        margin: 0; } }
 
 .icon__item-pic {
   display: -webkit-box;
@@ -276,13 +318,17 @@
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%); }
+    @media screen and (max-width: 480px) {
+      .why:before {
+        top: 30%; } }
   .why:after {
     content: "";
     background: url("/img/why/strawberry.png") center center/contain no-repeat;
     width: 10.0625rem;
     height: 19.6875rem;
     position: absolute;
-    bottom: -5%; }
+    bottom: -5%;
+    z-index: 10; }
   .why__text {
     text-align: center;
     width: 26.875rem;
@@ -331,6 +377,12 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media screen and (max-width: 768px) {
+    .feature {
+      width: 39%; } }
+  @media screen and (max-width: 480px) {
+    .feature {
+      width: 63%; } }
   .feature__pic {
     background-color: #f2f5f4;
     border-radius: 50%;
@@ -402,6 +454,11 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+  @media screen and (max-width: 768px) {
+    .comments .container {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .comments__header {
   text-align: left;
@@ -422,6 +479,13 @@
   background-color: #f8faf9;
   min-height: 21.9375rem;
   margin-bottom: 1.4375rem; }
+  @media screen and (max-width: 768px) {
+    .comments__content {
+      width: 33.125rem;
+      padding: 60px 35px 40px 35px; } }
+  @media screen and (max-width: 480px) {
+    .comments__content {
+      width: 31.875rem; } }
   .comments__content::before {
     content: "";
     display: block;
@@ -440,6 +504,9 @@
     background: url("/img/comment/berrie.png") center center no-repeat;
     width: 8.0625rem;
     height: 9.6875rem; }
+    @media screen and (max-width: 480px) {
+      .comments__content::after {
+        background-size: 70% auto; } }
 
 .comments__main {
   display: -webkit-box;
@@ -449,6 +516,12 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row; }
+  @media screen and (max-width: 768px) {
+    .comments__main {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
 
 .comments__users {
   display: -webkit-box;
@@ -466,6 +539,9 @@
 
 .comment__desc {
   padding: 10px 20px 20px 20px; }
+  @media screen and (max-width: 768px) {
+    .comment__desc {
+      text-align: center; } }
 
 .comment__title {
   letter-spacing: 1px;
@@ -547,7 +623,7 @@
   display: block;
   width: 8.4375rem;
   position: absolute;
-  bottom: -7%;
+  bottom: -3%;
   left: 3%;
   height: 7rem;
   z-index: 3; }
@@ -583,12 +659,27 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%; }
+  @media screen and (max-width: 768px) {
+    .team__list {
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
+  @media screen and (max-width: 480px) {
+    .team__list {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; } }
 
 .team__item {
   width: 24%;
   min-width: 15.25rem; }
   .team__item:nth-child(2n) {
     padding-top: 6%; }
+    @media screen and (max-width: 768px) {
+      .team__item:nth-child(2n) {
+        padding-top: 0; } }
 
 .team .item__content {
   width: 100%; }
@@ -626,6 +717,9 @@
 .team .item__text {
   font-size: 1.0625rem;
   color: #808080; }
+  @media screen and (max-width: 768px) {
+    .team .item__text {
+      max-width: 100%; } }
 
 .team .item__pic {
   width: 100%;
@@ -648,11 +742,17 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  min-height: 10%; }
+  min-height: 15%; }
   .footer__contacts {
     width: 50%; }
+    @media screen and (max-width: 480px) {
+      .footer__contacts {
+        width: 100%; } }
   .footer__socials {
     width: 50%; }
+    @media screen and (max-width: 480px) {
+      .footer__socials {
+        width: 100%; } }
   .footer .contact {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -666,6 +766,14 @@
     justify-content: center; }
     .footer .contact__address {
       font-size: 1.3125rem; }
+      @media screen and (max-width: 480px) {
+        .footer .contact__address {
+          margin-bottom: 0.625rem; } }
+    @media screen and (max-width: 480px) {
+      .footer .contact {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; } }
     .footer .contact__phone {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -675,6 +783,9 @@
       align-items: center;
       font-size: 1.3125rem;
       color: #0f5a47; }
+      @media screen and (max-width: 480px) {
+        .footer .contact__phone {
+          margin-bottom: 0.625rem; } }
       .footer .contact__phone:before {
         content: "";
         width: 0.75rem;
@@ -690,6 +801,16 @@
     -webkit-box-direction: normal !important;
     -ms-flex-direction: row !important;
     flex-direction: row !important; }
+    @media screen and (max-width: 480px) {
+      .footer__container {
+        -webkit-box-orient: vertical !important;
+        -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+        flex-direction: column !important;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        text-align: center; } }
 
 .social {
   display: -webkit-box;
@@ -701,6 +822,12 @@
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
+  @media screen and (max-width: 480px) {
+    .social {
+      width: 100%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
   .social__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -737,6 +864,15 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media screen and (max-width: 768px) {
+    .form {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; } }
   .form__column {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -746,6 +882,12 @@
     -ms-flex-direction: column;
     flex-direction: column;
     width: 49%; }
+    @media screen and (max-width: 768px) {
+      .form__column {
+        width: 69%; } }
+    @media screen and (max-width: 480px) {
+      .form__column {
+        width: 100%; } }
   .form__row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -754,10 +896,23 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     margin-bottom: 0.5rem; }
+    @media screen and (max-width: 768px) {
+      .form__row-checkbox {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
+    @media screen and (max-width: 768px) {
+      .form__row-buttons {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center; } }
   .form__content {
     width: 100%; }
     .form__content-textarea {
       margin-bottom: 0.4375rem; }
+      @media screen and (max-width: 768px) {
+        .form__content-textarea {
+          margin-bottom: 3.4375rem; } }
     .form__content--half {
       width: 48%; }
     .form__content--fourth {
@@ -859,8 +1014,17 @@
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start; }
+    @media screen and (max-width: 768px) {
+      .form .form__row-radio {
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        margin-bottom: 1.5625rem; } }
   .form__buttons {
     margin-top: 1.4375rem; }
+    @media screen and (max-width: 768px) {
+      .form__buttons {
+        margin-top: 3.4375rem; } }
   .form__button--hover {
     background-color: #0f5a47;
     color: white; }
@@ -991,6 +1155,12 @@
     -ms-flex-direction: row;
     flex-direction: row;
     width: 95%; }
+    @media screen and (max-width: 768px) {
+      .slider__container {
+        width: 54% !important; } }
+    @media screen and (max-width: 480px) {
+      .slider__container {
+        width: 91% !important; } }
   .slider__wrapper {
     overflow: hidden; }
   .slider .section__title-slider {
@@ -1028,6 +1198,11 @@
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column; } }
+    @media screen and (max-width: 480px) {
+      .slider__item {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; } }
   .slider .btn__arrow--prev {
     width: 2.5rem;
     -webkit-box-pack: start;
@@ -1039,6 +1214,9 @@
     position: absolute;
     z-index: 2;
     left: -2%; }
+    @media screen and (max-width: 768px) {
+      .slider .btn__arrow--prev {
+        top: 35%; } }
   .slider .btn__arrow--next {
     width: 2.5rem;
     -webkit-box-pack: end;
@@ -1050,6 +1228,14 @@
     position: absolute;
     z-index: 2;
     right: -2%; }
+    @media screen and (max-width: 768px) {
+      .slider .btn__arrow--next {
+        top: 35%;
+        right: -13%; } }
+    @media screen and (max-width: 480px) {
+      .slider .btn__arrow--next {
+        top: 35%;
+        right: -3%; } }
   .slider__left {
     width: 50%; }
     @media screen and (max-width: 768px) {
@@ -1064,6 +1250,9 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center; } }
+    @media screen and (max-width: 480px) {
+      .slider__left {
+        width: 85%; } }
   .slider__right {
     width: 50%;
     padding: 0.8125rem 0.3125rem 0.3125rem 4.25rem;
@@ -1089,6 +1278,9 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center; } }
+    @media screen and (max-width: 480px) {
+      .slider__right {
+        width: 95%; } }
   .slider__image {
     max-width: 100%; }
 
@@ -1132,6 +1324,9 @@
       color: #808080;
       line-height: 1.2;
       text-align: left; }
+      @media screen and (max-width: 768px) {
+        .content__composition-text {
+          text-align: center; } }
     @media screen and (max-width: 768px) {
       .content__composition {
         text-align: center; } }
@@ -1169,6 +1364,28 @@
       -ms-flex-align: center;
       align-items: center; } }
 
+.burger {
+  display: none;
+  width: 25px;
+  height: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  @media screen and (max-width: 768px) {
+    .burger {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; } }
+  .burger__item {
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: white; }
+
 html {
   font-size: 16px; }
   @media screen and (max-width: 768px) {
@@ -1189,7 +1406,6 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 960px;
   min-height: 100%;
   overflow: hidden; }
 
@@ -1221,6 +1437,12 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   height: 100%; }
+  @media screen and (max-width: 768px) {
+    .container {
+      width: 90%; } }
+  @media screen and (max-width: 480px) {
+    .container {
+      width: 95%; } }
 
 h1,
 h2,
