--- a/css/blocks/_comment.scss
+++ b/css/blocks/_comment.scss
@@ -1,4 +1,5 @@
 .comment {
+  align-items: center;
   &__desc {
     padding: 10px 20px 20px 20px;
     @include tablets {
@@ -36,6 +37,11 @@
     flex-shrink: 0;
     &-img{
       max-width: 100%
+    }
+    @include phones {
+      min-width:auto;
+      max-width: 45%;
+      justify-content: center;
     }
   }
 }
