--- a/css/main.scss
+++ b/css/main.scss
@@ -8,8 +8,9 @@ $bg_grey: #f8faf9;
 $white: white;
 
 
-$tablets: 768px;
+$tablets: 769px;
 $phones: 480px;
+$phones-small: 390px;
 
 
 
@@ -17,28 +18,28 @@ $phones: 480px;
 
 
 @import "normalize.css";
-@import "_misc/media.scss";
-@import "blocks/hero.scss";
-@import "blocks/header.scss";
-@import "blocks/menu.scss";
-@import "blocks/phone.scss";
-@import "blocks/logo.scss";
-@import "blocks/btn.scss";
-@import "blocks/why.scss";
-@import "blocks/feature.scss";
-@import "blocks/comments.scss";
-@import "blocks/comment.scss";
-@import "blocks/user.scss";
-@import "blocks/team.scss";
-@import "blocks/contacts.scss";
-@import "blocks/card.scss";
-@import "blocks/footer.scss";
-@import "blocks/social.scss";
-@import "blocks/form.scss";
-@import "blocks/menu1.scss";
-@import "blocks/slider.scss";
-@import "blocks/content.scss";
-@import "blocks/burger.scss";
+@import "_misc/_media.scss";
+@import "blocks/_hero.scss";
+@import "blocks/_header.scss";
+@import "blocks/_menu.scss";
+@import "blocks/_phone.scss";
+@import "blocks/_logo.scss";
+@import "blocks/_btn.scss";
+@import "blocks/_why.scss";
+@import "blocks/_feature.scss";
+@import "blocks/_comments.scss";
+@import "blocks/_comment.scss";
+@import "blocks/_user.scss";
+@import "blocks/_team.scss";
+@import "blocks/_contacts.scss";
+@import "blocks/_card.scss";
+@import "blocks/_footer.scss";
+@import "blocks/_social.scss";
+@import "blocks/_form.scss";
+@import "blocks/_menu1.scss";
+@import "blocks/_slider.scss";
+@import "blocks/_content.scss";
+@import "blocks/_burger.scss";
 
 
 html{
@@ -49,6 +50,10 @@ html{
   @include phones{
     font-size: 14px;
   }
+  @include phones-small{
+    font-size: 12px;
+  }
+
 }
 body {
   line-height: 1.42;
@@ -83,13 +88,12 @@ body {
     line-height: 1;
     width: 100%;
   }
-  @include phones{
-    min-width: 460px;
-  }
+
 }
 
 .container {
-  width: rem(940px);
+  max-width: rem(940px);
+  width:95%;
   position: relative;
   margin: 0 auto;
   display: flex;
@@ -139,6 +143,9 @@ footer {
   width: 100%;
 }
 
+a{
+  text-decoration: none;
+}
 * {
   box-sizing: border-box;
 }
