--- a/css/blocks/_menu.scss
+++ b/css/blocks/_menu.scss
@@ -16,8 +16,29 @@
     &:first-child{
       margin-left: rem(7px);
     }
+    @include tablets(){
+      margin:0;
+      font-size: rem(36px);
+    }
   }
   @include tablets(){
+    display: none;
+    &--active{
+      position: fixed;
+      width:100%;
+      height:100%;
+      left:0;
+      top:0;
+      z-index: 100;
+      justify-content: center;
+      align-items: center;
+
+      background: #0d0d0df5;
+      display: flex;
+    }
+
+  }
+  &-burger-link{
     display: none;
   }
 }
@@ -26,4 +47,12 @@
   align-items: center;
   justify-content: center;
   list-style-type: none;
+  @include tablets(){
+    flex-direction: column;
+    justify-content: center;
+      align-items: center;
+      height: 60%;
+      line-height: 2;
+      
+  }
 }
